# golfkompis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  docker.yml  release-please.yml
backend/: CHANGELOG.md  README.md  pyproject.toml
backend/src/golfkompis/: app.py  cli.py  config.py  course.py  domain.py  mingolf.py
backend/src/golfkompis/fixtures/: course_schedules.json  profile.json
backend/src/golfkompis/queue/: email.py  models.py  routes.py  schemas.py  worker.py
backend/src/golfkompis/resources/: courses.json
backend/src/golfkompis/users/: __init__.py  db.py  email.py  manager.py  models.py  schemas.py
backend/src/golfkompis/users/templates/email/: base.html  queue_expired.html  queue_match.html  reset.html  verification.html
backend/src/tests/: conftest.py  test_auth_routes.py  test_email_templates.py  test_mingolf_endpoints_session.py  test_mingolf_login.py  test_quality_fixes.py  test_queue.py  test_session_cache.py  test_user_manager.py  test_user_mingolf_verify.py
docs/superpowers/plans/: 2026-05-01-frontend-user-auth.md  2026-05-01-mingolf-creds-on-account.md
frontend/: AGENTS.md  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/.svelte-kit/types/src/routes/book/: $types.d.ts
frontend/.svelte-kit/types/src/routes/profile/account/: $types.d.ts
frontend/.svelte-kit/types/src/routes/verify/: $types.d.ts
frontend/src/lib/: format.test.ts  format.ts
frontend/src/lib/api/: client.ts  errors.ts  index.ts  types.ts
frontend/src/lib/api/endpoints/: bookings.ts  courses.ts  friends.ts  history.ts  meta.ts  profile.ts  queue.ts  users.test.ts  users.ts
frontend/src/lib/auth/: credentials.svelte.ts  currentUser.svelte.test.ts  currentUser.svelte.ts  golfId.ts  guards.ts  mingolfProfile.svelte.test.ts  mingolfProfile.svelte.ts
frontend/src/lib/components/: BookSlotDialog.svelte  BookingFind.svelte  CourseMultiSelect.svelte  CredentialsForm.svelte  Footer.svelte  Friends.svelte  History.svelte  Landing.svelte  Navbar.svelte  Profile.svelte  Profile.test.ts  QueueEntryCard.svelte  QueueList.svelte  UpcomingBookings.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/book/: +page.svelte
frontend/src/routes/forgot-password/: +page.svelte
frontend/src/routes/login/: +page.svelte  login.test.ts
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/profile/account/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/reset-password/: +page.svelte
frontend/src/routes/terms/: +page.svelte
frontend/src/routes/verify/: +page.svelte
src/: app.py
src/golfkompis/: __main__.py  app.py  cli.py  config.py  course.py  domain.py  endpoints.py  logging.py  mingolf.py  mock_client.py  smart_filters.py
src/golfkompis/fixtures/: __init__.py  bookings.json  friends.json  history.json
src/golfkompis/resources/: clubs.json  mapping.json
src/tests/: test_courses.py  test_quality_fixes.py
