[project]
name = "golfkompis"
version = "0.1.0"
description = "A system to manage golf bookings"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "fastapi>=0.115.12",
  "pydantic>=2.11.5",
  "pydantic-settings>=2.6.0",
  "requests>=2.32.4",
  "structlog>=25.5.0",
  "uvicorn>=0.34.3",
]

[project.scripts]
golfkompis = "golfkompis.__main__:main"

[dependency-groups]
dev = [
  "basedpyright>=1.39.2",
  "pre-commit>=4.0.0",
  "pytest>=9.0.3",
  "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
  "N815", # camelCase field names are required to match MinGolf API responses
  "B008", # FastAPI Query() in function defaults is the intended pattern
  "E501", # Long lines (URLs, docstrings) — not worth breaking
]

[tool.ruff.lint.isort]
known-first-party = ["golfkompis"]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/golfkompis"]
