[project]
name = "golfkompis"
version = "1.0.1"
description = "A system to manage golf bookings"

requires-python = "==3.13.*"
dependencies = [
  "fastapi>=0.136.3",
  "fastapi-users[sqlalchemy]>=14.0.0",
  "aiosqlite>=0.20.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "requests>=2.34.2",
  "structlog>=25.5.0",
  "uvicorn>=0.48.0",
  "fastapi-mail>=1.6.4",
]

[project.scripts]
golfkompis = "golfkompis.__main__:main"

[dependency-groups]
dev = [
  "basedpyright>=1.39.6",
  "pre-commit>=4.0.0",
  "ruff>=0.15.15",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "httpx>=0.28.1",
  "asgi-lifespan>=2.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
  "N815", # camelCase field names are required to match MinGolf API responses
  "N818", # domain exception names like BookingNotFound / CancelConflict are intentional
  "B008", # FastAPI Query() in function defaults is the intended pattern
  "E501", # Long lines (URLs, docstrings) — not worth breaking
]

[tool.ruff.lint.isort]
known-first-party = ["golfkompis"]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/golfkompis"]
